syntax = "proto2";

message TonieboxAudioFileHeader {
  required bytes sha1_hash = 1;
  required uint64 num_bytes = 2;
  required uint32 audio_id = 3;
  repeated uint32 track_page_nums = 4 [packed=true];
  required bytes _fill = 5;
  //custom_fields_start
  optional uint64 ogg_granule_position = 6;
  optional uint64 ogg_packet_count = 7;
  optional uint64 taf_block_num = 8;
  optional uint64 pageno = 9;
  //custom_fields_end
}